--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -8,14 +8,18 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context=".MainActivity$ArtistsFragment">
 
-    <EditText
+    <SearchView
+        android:id="@+id/artist_search"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/edittext_artist_search"
-        />
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="5dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:queryHint="@string/search_for_artist" />
 
     <ListView
-        android:layout_below="@+id/edittext_artist_search"
+        android:layout_below="@+id/artist_search"
         android:id="@+id/listview_artists"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
